Fri Aug 21 00:19:02 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/DestinationOrder/main.cpp:

          Added missing ACE_TEXT around cur_arg_strncasecmp argument.

Thu Aug 20 23:57:23 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataDurabilityCache.cpp:
        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/DataSampleList.h:
        * dds/DCPS/DataSampleList.inl:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/WriteDataContainer.h:
        * dds/DCPS/WriteDataContainer.cpp:

          Added support for non-default PRESENTATION QoS policies (write).

Thu Aug 20 16:59:49 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/TransportFactory.cpp:

          Removed obsolete comments for release with specific transport method.

Thu Aug 20 15:10:48 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/LivelinessTest/subscriber.cpp:

          Changed final test condition check to reflect new (correct)
          instance state behavior.

Wed Aug 19 23:10:11 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/WriteDataContainer.cpp:

          Initial changes to support non-default PRESENTATION QoS policies:
          - Updated DataSampleHeader to support coherent groups
          - Fixed byte ordering assignment issues (referenced wrong flag)
          - Updated flag operations; refactored update_flag method to
            inlined clear_flag and set_flag methods.

Wed Aug 19 16:24:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>
